--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -4,8 +4,8 @@
     <field name="inherit_id" ref="hr.view_employee_form"/>
     <field name="arch" type="xml">
 
-        <!-- Example: Add new tab -->
-        <notebook position="inside">
+        <!-- Insert our tab inside the notebook -->
+        <xpath expr="//sheet/notebook" position="inside">
             <page string="Attendances">
                 <field name="attendance_ids" context="{'default_employee_id': active_id}">
                     <tree editable="bottom">
@@ -22,7 +22,7 @@
                     </form>
                 </field>
             </page>
-        </notebook>
+        </xpath>
 
     </field>
 </record>
