--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -7,18 +7,7 @@
         <xpath expr="//sheet/notebook" position="inside">
             <page string="Attendances">
                 <field name="attendance_ids" widget="one2many_list">
-                    <tree editable="bottom">
-                        <field name="check_in"/>
-                        <field name="check_out"/>
-                        <field name="worked_hours"/>
-                    </tree>
-                    <form>
-                        <group>
-                            <field name="check_in"/>
-                            <field name="check_out"/>
-                            <field name="worked_hours"/>
-                        </group>
-                    </form>
+                    <field name="attendance_ids" readonly="1"/>
                 </field>
             </page>
         </xpath>
