--- a/CreativeTC/views/daily_habit_tracker_view.xml
+++ b/CreativeTC/views/daily_habit_tracker_view.xml
@@ -1,9 +1,10 @@
 <odoo>
+    <!-- Tree view -->
     <record id="view_daily_habit_tree" model="ir.ui.view">
         <field name="name">daily.habit.tree</field>
         <field name="model">creative.daily_habit</field>
         <field name="arch" type="xml">
-            <tree>
+            <tree string="Daily Habits">
                 <field name="name"/>
                 <field name="date"/>
                 <field name="completed"/>
@@ -11,11 +12,12 @@
         </field>
     </record>
 
+    <!-- Form view -->
     <record id="view_daily_habit_form" model="ir.ui.view">
         <field name="name">daily.habit.form</field>
         <field name="model">creative.daily_habit</field>
         <field name="arch" type="xml">
-            <form>
+            <form string="Daily Habit">
                 <sheet>
                     <group>
                         <field name="name"/>
@@ -28,17 +30,14 @@
         </field>
     </record>
 
-    <!-- Menu item -->
-    <menuitem id="menu_daily_habit_root" name="Daily Habit Tracker" parent="hr.menu_hr_root"/>
-    <menuitem id="menu_daily_habit" name="Habits" parent="menu_daily_habit_root" action="action_daily_habit"/>
-
     <!-- Action -->
     <record id="action_daily_habit" model="ir.actions.act_window">
         <field name="name">Daily Habits</field>
         <field name="res_model">creative.daily_habit</field>
         <field name="view_mode">tree,form</field>
-        <field name="help" type="html">
-            <p class="oe_view_nocontent_create">Create your daily habits!</p>
-        </field>
     </record>
+
+    <!-- Menu item -->
+    <menuitem id="menu_daily_habit_root" name="Daily Habit Tracker" parent="hr.menu_hr_root"/>
+    <menuitem id="menu_daily_habit" name="Habits" parent="menu_daily_habit_root" action="action_daily_habit"/>
 </odoo>
