--- a/CreativeTC/views/hr_employee_views.xml
+++ b/CreativeTC/views/hr_employee_views.xml
@@ -1,3 +1,4 @@
+<odoo>
 <record id="view_employee_form_inherit_attendance" model="ir.ui.view">
     <field name="name">hr.employee.form.attendance</field>
     <field name="model">hr.employee</field>
@@ -14,3 +15,4 @@
 
     </field>
 </record>
+</odoo>
