--- a/CreativeTC/views/daily_habit_tracker_view.xml
+++ b/CreativeTC/views/daily_habit_tracker_view.xml
@@ -3,6 +3,7 @@
     <record id="view_daily_habit_tree" model="ir.ui.view">
         <field name="name">daily.habit.tree</field>
         <field name="model">creative.daily_habit</field>
+        <field name="type">tree</field>
         <field name="arch" type="xml">
             <tree string="Daily Habits">
                 <field name="name"/>
@@ -16,6 +17,7 @@
     <record id="view_daily_habit_form" model="ir.ui.view">
         <field name="name">daily.habit.form</field>
         <field name="model">creative.daily_habit</field>
+        <field name="type">form</field>
         <field name="arch" type="xml">
             <form string="Daily Habit">
                 <sheet>
@@ -29,7 +31,7 @@
             </form>
         </field>
     </record>
-    
+
     <!-- Action -->
     <record id="action_daily_habit" model="ir.actions.act_window">
         <field name="name">Daily Habits</field>
@@ -37,7 +39,7 @@
         <field name="view_mode">tree,form</field>
     </record>
 
-    <!-- Menu item -->
+    <!-- Menu -->
     <menuitem id="menu_daily_habit_root" name="Daily Habit Tracker" parent="hr.menu_hr_root"/>
     <menuitem id="menu_daily_habit" name="Habits" parent="menu_daily_habit_root" action="action_daily_habit"/>
 </odoo>
