--- a/CreativeTC/views/daily_habit_tracker_view.xml
+++ b/CreativeTC/views/daily_habit_tracker_view.xml
@@ -1,45 +1,25 @@
 <odoo>
-    <!-- Tree view -->
-    <record id="view_daily_habit_tree" model="ir.ui.view">
-        <field name="name">daily.habit.tree</field>
-        <field name="model">creative.daily_habit</field>
-        <field name="type">tree</field>
+    <!-- Simple Form View -->
+    <record id="view_hello_world_form" model="ir.ui.view">
+        <field name="name">hello.world.form</field>
+        <field name="model">creative.hello_world</field>
         <field name="arch" type="xml">
-            <tree string="Daily Habits">
-                <field name="name"/>
-                <field name="date"/>
-                <field name="completed"/>
-            </tree>
-        </field>
-    </record>
-
-    <!-- Form view -->
-    <record id="view_daily_habit_form" model="ir.ui.view">
-        <field name="name">daily.habit.form</field>
-        <field name="model">creative.daily_habit</field>
-        <field name="type">form</field>
-        <field name="arch" type="xml">
-            <form string="Daily Habit">
+            <form string="Hello World">
                 <sheet>
-                    <group>
-                        <field name="name"/>
-                        <field name="date"/>
-                        <field name="completed"/>
-                        <field name="notes"/>
-                    </group>
+                    <h1>Hello World!</h1>
                 </sheet>
             </form>
         </field>
     </record>
 
     <!-- Action -->
-    <record id="action_daily_habit" model="ir.actions.act_window">
-        <field name="name">Daily Habits</field>
-        <field name="res_model">creative.daily_habit</field>
-        <field name="view_mode">tree,form</field>
+    <record id="action_hello_world" model="ir.actions.act_window">
+        <field name="name">Hello World</field>
+        <field name="res_model">creative.hello_world</field>
+        <field name="view_mode">form</field>
     </record>
 
     <!-- Menu -->
-    <menuitem id="menu_daily_habit_root" name="Daily Habit Tracker" parent="hr.menu_hr_root"/>
-    <menuitem id="menu_daily_habit" name="Habits" parent="menu_daily_habit_root" action="action_daily_habit"/>
+    <menuitem id="menu_hello_root" name="Hello App" parent="hr.menu_hr_root"/>
+    <menuitem id="menu_hello_world" name="Hello World" parent="menu_hello_root" action="action_hello_world"/>
 </odoo>
