--- a/CreativeTC/views/daily_habit_tracker_view.xml
+++ b/CreativeTC/views/daily_habit_tracker_view.xml
@@ -1,25 +1,26 @@
 <odoo>
-    <!-- Simple Form View -->
-    <record id="view_hello_world_form" model="ir.ui.view">
-        <field name="name">hello.world.form</field>
-        <field name="model">creative.hello_world</field>
+    <!-- Form View -->
+    <record id="view_daily_habit_form" model="ir.ui.view">
+        <field name="name">daily.habit.form</field>
+        <field name="model">creative.daily_habit_tracker</field>
         <field name="arch" type="xml">
-            <form string="Hello World">
+            <form string="Daily Habit Tracker">
                 <sheet>
-                    <h1>Hello World!</h1>
+                    <h1>Hello!! Welcome to the new App!</h1>
                 </sheet>
             </form>
         </field>
     </record>
 
     <!-- Action -->
-    <record id="action_hello_world" model="ir.actions.act_window">
-        <field name="name">Hello World</field>
-        <field name="res_model">creative.hello_world</field>
+    <record id="action_daily_habit" model="ir.actions.act_window">
+        <field name="name">Daily Habit</field>
+        <field name="res_model">creative.daily_habit_tracker</field>
         <field name="view_mode">form</field>
     </record>
 
     <!-- Menu -->
-    <menuitem id="menu_hello_root" name="Hello App" parent="hr.menu_hr_root"/>
-    <menuitem id="menu_hello_world" name="Hello World" parent="menu_hello_root" action="action_hello_world"/>
+    <menuitem id="menu_daily_habit_root" name="Habit Tracker"/>
+    <menuitem id="menu_daily_habit" name="Daily Habit"
+              parent="menu_daily_habit_root" action="action_daily_habit"/>
 </odoo>
