--- a/CreativeTC/views/daily_habit_tracker_view.xml
+++ b/CreativeTC/views/daily_habit_tracker_view.xml
@@ -1,7 +1,7 @@
 <odoo>
     <record id="view_daily_habit_form" model="ir.ui.view">
         <field name="name">daily.habit.form</field>
-        <field name="model">creative.daily_habit_tracker</field>
+        <field name="model">creativetc.daily_habit_tracker</field>
         <field name="arch" type="xml">
             <form string="Daily Habit Tracker">
                 <sheet>
