--- a/CreativeTC/views/a1.xml
+++ b/CreativeTC/views/a1.xml
@@ -1,13 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <odoo>
-    <record id="view_a1_form" model="ir.ui.view">
-        <field name="name">a1.form</field>
-        <field name="model">a1.empty</field>
-        <field name="arch" type="xml">
-            <form string="A1 Empty Form">
-                <sheet>
-                    <h1>Hello from A1!</h1>
-                </sheet>
-            </form>
-        </field>
-    </record>
+    <menuitem id="menu_a1_root" name="A1 Test App"/>
 </odoo>
