--- a/CreativeTC/views/property_views.xml
+++ b/CreativeTC/views/property_views.xml
@@ -2,6 +2,7 @@
     <record id="view_real_estate_property_tree" model="ir.ui.view">
         <field name="name">real.estate.property.tree</field>
         <field name="model">real.estate.property</field>
+        <field name="type">tree</field>
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
@@ -12,6 +13,7 @@
     <record id="view_real_estate_property_form" model="ir.ui.view">
         <field name="name">real.estate.property.form</field>
         <field name="model">real.estate.property</field>
+        <field name="type">form</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
@@ -23,18 +25,17 @@
         </field>
     </record>
 
-    <!-- Menu -->
-    <menuitem id="menu_real_estate_root" name="Real Estate"/>
-
-    <menuitem id="menu_real_estate_property" 
-              name="Properties" 
-              parent="menu_real_estate_root" 
-              action="action_real_estate_property"/>
-
     <!-- Action -->
     <record id="action_real_estate_property" model="ir.actions.act_window">
         <field name="name">Properties</field>
         <field name="res_model">real.estate.property</field>
         <field name="view_mode">tree,form</field>
     </record>
+
+    <!-- Menus -->
+    <menuitem id="menu_real_estate_root" name="Real Estate"/>
+    <menuitem id="menu_real_estate_property"
+              name="Properties"
+              parent="menu_real_estate_root"
+              action="action_real_estate_property"/>
 </odoo>
