--- a/CreativeTC/views/property_views.xml
+++ b/CreativeTC/views/property_views.xml
@@ -1,8 +1,8 @@
 <odoo>
+    <!-- Tree view -->
     <record id="view_real_estate_property_tree" model="ir.ui.view">
         <field name="name">real.estate.property.tree</field>
         <field name="model">real.estate.property</field>
-        <field name="type">tree</field>
         <field name="arch" type="xml">
             <tree>
                 <field name="name"/>
@@ -10,10 +10,10 @@
         </field>
     </record>
 
+    <!-- Form view -->
     <record id="view_real_estate_property_form" model="ir.ui.view">
         <field name="name">real.estate.property.form</field>
         <field name="model">real.estate.property</field>
-        <field name="type">form</field>
         <field name="arch" type="xml">
             <form>
                 <sheet>
@@ -32,7 +32,7 @@
         <field name="view_mode">tree,form</field>
     </record>
 
-    <!-- Menus -->
+    <!-- Menu -->
     <menuitem id="menu_real_estate_root" name="Real Estate"/>
     <menuitem id="menu_real_estate_property"
               name="Properties"
