--- a/CreativeTC/views/property_views.xml
+++ b/CreativeTC/views/property_views.xml
@@ -1,5 +1,5 @@
 <odoo>
-    <!-- Form view only -->
+    <!-- Form view -->
     <record id="view_real_estate_property_form" model="ir.ui.view">
         <field name="name">real.estate.property.form</field>
         <field name="model">real.estate.property</field>
@@ -14,17 +14,18 @@
         </field>
     </record>
 
-    <!-- Action (only form view) -->
+    <!-- Action -->
     <record id="action_real_estate_property" model="ir.actions.act_window">
         <field name="name">Properties</field>
         <field name="res_model">real.estate.property</field>
         <field name="view_mode">form</field>
     </record>
 
-    <!-- Menu -->
-    <menuitem id="menu_real_estate_root" name="Real Estate"/>
+    <!-- Menus -->
+    <menuitem id="menu_real_estate_root" name="Real Estate" sequence="10"/>
     <menuitem id="menu_real_estate_property"
               name="Properties"
               parent="menu_real_estate_root"
-              action="action_real_estate_property"/>
+              action="action_real_estate_property"
+              sequence="10"/>
 </odoo>
